--- a/pages/Programming/Subsystems/SubsystemOverview.mdx
+++ b/pages/Programming/Subsystems/SubsystemOverview.mdx
@@ -16,14 +16,19 @@ import {Callout} from 'nextra/components';
 <div></div>
 ### What is a Subsystem?
 
-An FRC robot is made from multiple <u>Subsystems</u>, or parts of a robot that each perform a task seperately and while working together.
+An FRC robot is made from multiple <u>Subsystems</u>, or parts of a robot that each perform a task separately and while working together.
 <div></div>
+
+<Callout type="warning" emoji={"⚠"}>FEDS201 has created a Custom Framework, its mildly different from normal WpiLib and FRC Setup </Callout>
 
 ### How do we program subsystems?
 
 We use Java object-oriented programming to program our robot. We create subsystems using a class and give it functions using commands.
 
-<Callout type={"info"} emoji={"💡"}> Learn more about Object-oriented programming in the [OOP Section](https://musical-capybara-g465xqw4v5437p9-3000.app.github.dev/Non-FRC/Object-OrientedProgrammingConcepts).</Callout>
+<Callout type={"info"} emoji={"💡"}> Learn more about Object-oriented programming in the [OOP Section](https://programers-handbook.vercel.app/Intro_To_Java/OOPS-concept).</Callout>
+
+
+
 
 
 ![robot img](https:///i.imgur.com/aVyfHJK.png)
@@ -34,10 +39,10 @@ We use Java object-oriented programming to program our robot. We create subsyste
 ### Subsystem & Code Examples:
 
 <Cards>
-<Card title="Arm" target="_self" emoji={"🦾"} href="https://programers-handbook.vercel.app/FRC-Guide/Subsystems/Arm" />
-<Card title="Shooter" target="_self" emoji={"🔫"} href="https://programers-handbook.vercel.app/FRC-Guide/Subsystems/DriveBase" />
-<Card title="intake" target="_self" emoji={"➡"} href="https://programers-handbook.vercel.app/FRC-Guide/Subsystems/Intake" />
-<Card title="Drive Base" target="_self" emoji={"🛞"} href="https://programers-handbook.vercel.app/FRC-Guide/Subsystems/Shooter" />
+<Card title="Arm" target="_self" emoji={"🦾"} href="../Subsystems/Arm" />
+<Card title="shooter" target="_self" emoji={"🔫"} href="../Subsystems/Shooter" />
+<Card title="intake" target="_self" emoji={"➡"} href="../Subsystems/Intake" />
+<Card title="Drive Base" target="_self" emoji={"🛞"} href="../Subsystems/DriveBase" />
 
 </Cards>
 
