--- a/pages/CAD/2022recap.mdx
+++ b/pages/CAD/2022recap.mdx
@@ -1,5 +1,10 @@
-## Introduction:
+### Rapid React (2021 - 2022)
 
-#### Well well well,
-> * The hardest part about CAD is not CAD - some idiot
+*Leads: Ethan & Emron | Students: Sukhesh, Arya, & Immanuel*
+
+CAD was in a very primitive stage during this time. CAD has been pretty much useless to the team for many years. That sounds harsh, but that was the actual reality of this subgroup. There needed to be more input CAD provided to the building aspect of the robot, as all the robots built for the 24 years the FEDS have existed have all been built without any CAD planning.
+
+#### Ebenezer CAD (2021 - 2022)
+![robot img](https:///i.imgur.com/1fqsSfc.png)
+
 
