--- a/pages/CAD/2023recap.mdx
+++ b/pages/CAD/2023recap.mdx
@@ -1,5 +1,55 @@
-## Introduction:
+### Charged Up (2022 - 2023)
 
-#### Well well well,
-> * The hardest part about CAD is not CAD - some idiot
+*Leads: Sukhesh & Arya | Students: Michael, Julia, Naren, and some other ppl I forgot*
+
+Arya and I(Sukhesh) observed a lot of the improvements needed to CAD and set out to make a plan that could change the role of CAD on the team. Below is the list of improvements/goals we had for the season.
+
+* MORE DETAILED CAD!!!!!
+* Stick to the build schedule.
+* Work in sync with mechanical
+* Get better at CAD
+* Get the robot painted
+* Make robot look cool
+* Finish all of CAD in 1 week
+* Train all the new students to do CAD
+* Utilize other functions of CAD
+* Not screwing up on the design of the robot
+
+Yeah, we were pretty ambitious. It’s a crazy feeling when you become the first group of students to be given the challenge to completely change the course of this subgroup. CAD has always been downplayed in the build aspect of the robot since the start, so we were ready to take up the challenge of actually utilizing CAD for all aspects of the build process.
+
+#### Off-Season
+The most shocking thing about this season was the sheer amount of students interested in CAD. It was probably the biggest shock of the season, mainly cause like who actually wants to do CAD? CAD ended up being the largest subgroup and we had to figure out how to engage all the students. Like last year, we were using Autodesk Inventor as the main CAD software. Last year we went through a [library of practice parts](https://ed.iitm.ac.in/~raman/Autodesk%20Inventor%20Practice%20Part%20Drawings.pdf) given by some random dudes on the internet as practice. From experience I can say that the drawings were helpful up to a point, because many of the more advanced drawings were pointless as the features required to make them would never be used on our own parts. We had students go through the practice parts and ran sessions to guide students through the assembly process of the robot.
+
+Our biggest problem was that many students did not have windows computers at home to run Autodesk Inventor. The training for the students had to happen during robotics, and this was especially difficult as the team only had meetings every Thursday. On average the students received a total of 10-15 hours of CAD training for the off season. By the time build season came, it was not surprising that only 3 students on the team could “actively” work on the robot.
+
+A side thing I did was manually download every single part from the vex website and compile a [local library](https://drive.google.com/drive/folders/1rQTrJXcOF6FIEMX1mSF6UkgM26bGV4Xc?usp=drive_link)(Look in vex folder) to easily access the parts without trying to search them up. Yeah. I know. I have no life.
+
+#### Build-Season
+
+Similar to previous years, our prototyping started out with a simple brainstorm of all the possibilities to score points in the new game. Scouting provided input on ways we could maximize our scoring, and we developed prototypes that followed our scoring plan. CAD immediately got started on working on designs for each prototype. Our inexperience really showed here. Our CAD process was slow due to many factors mentioned later on. Our CAD model really only got done for the actual competition robot. What’s scary about this is that it means we don’t actually know if our designs were going to work
+
+##### [Dora CAD (2022 - 2023)](https://cad.onshape.com/documents/4b1ad0cca8160e2cd2f7b00f/w/4019a678b62cc36b925643ab/e/740d57fc25a00b8f3cb9a409?renderMode=0&uiState=6768596593b03333d4b0ff9c)
+![robot img](https:///i.imgur.com/D9T95f7.png)
+
+This robot sucked. No like seriously, it sucked so much that the students vowed to never talk about this robot again. It was a pure disgrace and utter disappointment to the entire FEDS 201 franchise. To be honest though, I tried my best. Boss (may god bless his soul) was investing in the future of the CAD team by giving us this valuable learning experience. He threw this season to let us new students learn to invest in a better season next year. This robot was just a massive defense bot since the arms could not operate since intake weighed too much. This robot was a utter failure, but the beauty in that is the fact that I could never repeat the same mistake again. I knew what I was looking for. I knew what I had to do to make a FRC robot.
+
+Unfortunately I also learned about the main side effect to CAD - CAD Burnout.
+
+I was done. I just couldn't CAD another robot. So this is where I pass it on to Arya for the 2nd robot we made in the same season. (First time in FEDS History. That's how bad this season was.)
+
+##### Dawn CAD (2022 - 2023)
+![robot img](https:///i.imgur.com/rwvrMT0.png)
+
+Arya here. Sukhesh basically left everything to me and I also got CAD Burnout very quickly. This at least the mentors directed me to do everything so it was a lot easier to figure out then when we had to creatively think of everything. The hardest part of this robot was designing the uprights for the arm. The sheer amount of issues with the gear ratios and chain tensioning was extremely annoying. We eventually figured it out though.
+
+#### Takeaways
+
+Arya and I were not ready at all for the robot. CAD is by far the hardest subgroup on the robotics team. I think many people don’t understand the difficulty with planning every single thing that has to happen on the robot for it to work. We suffered a lot while planning the robot. We didn’t know what parts to use to create what we thought of. We didn’t know how to attach the parts and if there would be any interference with it. There were just so many unknowns when we were cadding the robot up that we just assumed would work until we actually see the problem when mechanical is trying to figure out what to do from looking at the model. I like to call this skill - **“Design sense”**: The ability to understand how a part works and manipulate the part to attach to anything . We were heavily lacking in that category, and I think in large part it had to do with the fact that me and Arya were both first year leads in CAD.
+
+**Experience is the only thing that can actually improve our design senses.**
+
+
+
+
+
 
