--- a/pages/CAD/Introduction.mdx
+++ b/pages/CAD/Introduction.mdx
@@ -1,5 +1,10 @@
 ## Introduction:
 
-#### Well well well,
+It's pretty common for people to think CAD is all about designing things....
+
+and in essence it is...
+
+but that very term "designing things" makes it sound like its simple.
+
 > * The hardest part about CAD is not CAD - some idiot
 
