--- a/pages/Programming/Subsystems/SubsystemOverview.mdx
+++ b/pages/Programming/Subsystems/SubsystemOverview.mdx
@@ -31,7 +31,7 @@ We use Java object-oriented programming to program our robot. We create subsyste
 
 
 
-![robot img](https:///i.imgur.com/aVyfHJK.png)
+![robot img](https:///i.imgur.com/JbsJBCf.png)
 
 * Image of FRC 201's 2024 Robot, SPYDER.
 * Intake, arm, and shooter subsystems can be seen.
