Replaced imgur links, Finished Introduction

--- a/pages/CAD/Design/Collaboration/Needs.mdx
+++ b/pages/CAD/Design/Collaboration/Needs.mdx
@@ -1,5 +1,5 @@
+import { YouTube } from "mdx-embed";
+
 ## Introduction:
 
-#### Well well well,
-> * The hardest part about CAD is not CAD - some idiot
-
+<YouTube youTubeId="0CutVc9WRc4" />
