--- a/pages/CAD/Season+Recaps/2022recap.mdx
+++ b/pages/CAD/Season+Recaps/2022recap.mdx
@@ -5,7 +5,7 @@
 CAD was in a very primitive stage during this time. CAD has been pretty much useless to the team for many years. That sounds harsh, but that was the actual reality of this subgroup. There needed to be more input CAD provided to the building aspect of the robot, as all the robots built for the 24 years the FEDS have existed have all been built without any CAD planning.
 
 ## Ebenezer CAD (2021 - 2022)
-![robot img](https:///i.imgur.com/1fqsSfc.png)
+![robot img](https://lh3.googleusercontent.com/pw/AP1GczPY83j-vCNq16qZnUYuGy4PK0lLyd9QZNqk2xbYr4PA09VgxF_E1HWAEvPLC81Dk_oiILkZt7DNQDh5pelWueeaKveL01AkOyFfDSKGoQtue3-SfGy-7bOcLewLIvnRb7XZr_chbmIl0rMM0PKbKU_1hA=w446-h512-s-no?authuser=0)
 
 ## Season Summary:
 This is all from my perspective (Sukhesh Here) since the remaining members have all left. (God I feel old now...)
