--- a/pages/CAD/Season+Recaps/2023recap.mdx
+++ b/pages/CAD/Season+Recaps/2023recap.mdx
@@ -29,7 +29,7 @@ A side thing I did was manually download every single part from the vex website 
 Similar to previous years, our prototyping started out with a simple brainstorm of all the possibilities to score points in the new game. Scouting provided input on ways we could maximize our scoring, and we developed prototypes that followed our scoring plan. CAD immediately got started on working on designs for each prototype. Our inexperience really showed here. Our CAD process was slow due to many factors mentioned later on. Our CAD model really only got done for the actual competition robot. What’s scary about this is that it means we don’t actually know if our designs were going to work
 
 ### [Dora CAD (2022 - 2023)](https://cad.onshape.com/documents/4b1ad0cca8160e2cd2f7b00f/w/4019a678b62cc36b925643ab/e/740d57fc25a00b8f3cb9a409?renderMode=0&uiState=6768596593b03333d4b0ff9c)
-![robot img](https:///i.imgur.com/ImliEXw.png)
+![robot img](https://lh3.googleusercontent.com/pw/AP1GczOzc7xoBd6l34ihIcnao7CwMxFG3MsRQPif-8TOTxWqRwEsK5mx4oukMuhPkJyTGCLphpkuwDFGsuXHXyRCsq5UCnv_YHxedG1J661pJbeqJdJHKskLKyYsCZDJhP9z7BoEYj7gS19s90pOBAxV6xNT8w=w1600-h1600-s-no?authuser=0)
 
 This robot sucked. No like seriously, it sucked so much that the students vowed to never talk about this robot again. It was a pure disgrace and utter disappointment to the entire FEDS 201 franchise. To be honest though, I tried my best. Boss (may god bless his soul) was investing in the future of the CAD team by giving us this valuable learning experience. He threw this season to let us new students learn to invest in a better season next year. This robot was just a massive defense bot since the arms could not operate since intake weighed too much. This robot was a utter failure, but the beauty in that is the fact that I could never repeat the same mistake again. I knew what I was looking for. I knew what I had to do to make a FRC robot.
 
@@ -38,7 +38,7 @@ Unfortunately I also learned about the main side effect to CAD - CAD Burnout.
 I was done. I just couldn't CAD another robot. So this is where I pass it on to Arya for the 2nd robot we made in the same season. (First time in FEDS History. That's how bad this season was.)
 
 ### Dawn CAD (2022 - 2023)
-![robot img](https:///i.imgur.com/5WheckY.png)
+![robot img](https://lh3.googleusercontent.com/pw/AP1GczNirfckrKq26ootxaxEVsvbVP3k0Yg-BiU9TVrtsU0qoNW4aUnjsLVHLzLQdUcu6CnmAwJvo7prwFb8G5RIXBkdKlCOiI_-AbqJme3FRi8w6QruI2I43gIJVEfHVEv_h1Sm9hQJXIpyicJUB4sH4bx_Lg=w1145-h961-s-no?authuser=0)
 
 Arya here. Both Sukhesh & I hated the robot so much that I errrm deleted the cad for this robot after the season ended so this is the only surviving picture of the model....
 
