--- a/pages/CAD/Season+Recaps/2024recap.mdx
+++ b/pages/CAD/Season+Recaps/2024recap.mdx
@@ -19,7 +19,7 @@ Following strictly to the outline, we had to create some drastic changes to CAD.
 
 Onshape is a cloud based platform that suited all our needs for collaboration. Of course, there was a learning curve that Myself, Arya, & Michael needed to push through.
 
-![early learning](https:///i.imgur.com/dgPxGMg.png)
+![early learning](https://lh3.googleusercontent.com/pw/AP1GczMsqrEO8FYQSUQNmOqoEa94ph06SMklKroQfk9WwBVrYUHYg8kGm8CSrut_cvypb6ddx4o_VWo9U-PfPuYGF2kXyMvmhDnHFy33YcUyBvswf4R_P7tyzvpr3m2WdbSZSbl4FUZxskklcKEw4ZGdax5g-w=w3840-h1440-s-no?authuser=0)
 
 (Screenshot above of me replicating team 1678's hooded shooter)
 
@@ -29,7 +29,7 @@ The new students happened to all be in one friend group so they all seemed to ha
 
 The robot in 3 months challenge helped us out greatly as we got to test out the capabilities of Onshape before the season started
 
-![first robot](https:///i.imgur.com/LcA4cOA.png)
+![first robot](https://lh3.googleusercontent.com/pw/AP1GczNQyQYWbvL70fM0JtasffFucQ0vdOaFuTmwuVzf2b9mApB40b5j0i3HgP_NsZ3uWJU4wqHtxd90YPUu-udQGPKN9kXn8dAu1zzhnOekumEgmTqbr8lLwtaJjh1JwYzB-4E5Xaya8ndV64bh08RdgX8lhQ=w2197-h1330-s-no?authuser=0)
 
 While we understood that this was the first model, we were kind of... disappointed. We learned onshape but we kind of struggled with communication (having mistakes working in wrong branches, not being able to complete subsystems because of waiting for someone else to finish theirs, etc.), and we realized that more than anything that was the most important thing coming into the upcoming build season.
 
@@ -39,7 +39,7 @@ While we understood that this was the first model, we were kind of... disappoint
 I'm happy to say that the work we did to improve CAD worked. I present to you, for the first time in the teams history where CAD finished before Mechanical (and also a first for having a fully completed CAD model), Agent Spyder.
 
 ### [Agent Spyder (2023 - 2024)](https://cad.onshape.com/documents/1b9d7b2a208b97b111bb5a4e/w/be0ea876456565543825468e/e/b611f9a3076e40487b93ed57?renderMode=0&uiState=67697f87df9721756123ab2e)
-![robot img](https:///i.imgur.com/JbsJBCf.png)
+![robot img](https://lh3.googleusercontent.com/pw/AP1GczOP19W4oYt8ie1VEsoLIhIpqphr9a9_LDZAj9yEP5YP_QZCOimKqInf_g0pS7mxCeaPm_59HVjgfZobNNSHRQ5oBg_NBxnAKKPmgBf0oj6yhGUod1eF8JoU5cpdXXA225CLQ20P7TMNTiDGlxkhnvXbzg=w1637-h1119-s-no?authuser=0)
 
 Sure enough, we cad-ded everything. Down to the very last screw. To say this model was an upgrade from last year's disaster would be a major understatement. It was like a completely different team made designed this robot. Can we just take a second to appreciate this model? A fully flushed out upside down electrical board, with the coolest looking structural cutouts ive ever seen (also a first in the team's history), with the lightest robot in this team's history, and a sick color scheme to match the vibe— it truly is a masterpiece in my eyes.
 
@@ -47,7 +47,7 @@ Ok enough of the glazing, lets get down to the process of how we got here.
 
 Before kickoff started we went over a rigid structure of the build schedule, having CAD spend 2 weeks to design the robot. While we were extremely motivated to accomplish such a feat, realistically we had no chance in hell of completing the entire CAD model in 2 weeks.
 
-![calender](https:///i.imgur.com/vMME2k2.png)
+![calender](https://lh3.googleusercontent.com/pw/AP1GczOzKk0XK0s8NGwq18nrDBeYAREIoHv72nf1NlrzuYmWmkkI1NqNV2CT2cgXeutGwFlM5XBU6_mueycCoqrViZmn7Lwf7UKEJYq1PltVwQ1y_iBCY9WzwT5JneS4Z_zlm5IrVe1J5O9QYpI9M3Cevild6g=w1645-h436-s-no?authuser=0)
 
 #### Brainstorming
 
@@ -68,24 +68,24 @@ The constraints were based off of the strategy that scouting came up with. Most 
 
 As usual, every design starts from the 2D world. We used variable sketches to help assist us in replicating the actions that the robot would possibly do to ensure the geometry for the robot would meet the constraints.
 
-![2d planning](https:///i.imgur.com/umVcaFs.png)
+![2d planning](https://lh3.googleusercontent.com/pw/AP1GczNM3PmmvtLugsA1Pql56MzemwKuO3oprG3-NpWOI4R-pGKD6X5iyjoH3ZbocG7GdOmeootwjiHhu4puBNogbEIwgasYhpEpiiOdm_WG3PbmsFaD1IHyBen8WLu-yGFvr_91iEshh8Cw2bvRjdXlu4B7PA=w2377-h1651-s-no?authuser=0)
 
 Exact 2D planning sketch utilized to figure out the general geometry we desired. Most of the sketches were variable as in we could change the orientation of the makeshift intake and shooter to get the desired movements for the subassembly. This sketch represents the robot on the ground picking up a note from its left side with the amp on its right side. Construction lines are extremely useful for making design plans like this.
 
-![2d planning](https:///i.imgur.com/4TUfQVz.png)
+![2d planning](https://lh3.googleusercontent.com/pw/AP1GczP4ODSCBvLN66zeeCzEdb271j3zOxBQRAO43oDMoF25Y9bLYzIW28pkRQftbXHwneAeTCtTvxEvsG5u1yI_MWi26CKCegYO89o9HYiIP26qDroUZiPIv9LaV0jbY9I7_4KYFw0J6_InfUbEvtz_-WHdKw=w2296-h1722-s-no?authuser=0)
 
 After getting an overall general sketch with an agreed upon design (We had an online Zoom meeting and 2 in person meetings w/ the mentors to design this), we started to convert the sketch to 3D to do a general review with the team. Above is the position of the robot to shoot into the trap. (It was planned for the note to go through an open slot in the intake acting as both an intake and a secondary shooter)
 
-![2d planning](https:///i.imgur.com/Y7h5xKa.png)
+![2d planning](https://lh3.googleusercontent.com/pw/AP1GczOmuMk86g3A06J-gxCAe8OH9BsWb_P73StEjZGWBl9fE1CBQXhy-by7r7RAZ5ghABV5pZDgJBDf3oPR9T9D9nms8PM6vlJh3t3a1VW4CawxVyylzKzxnN9GHxDkfhZCQ3_cw1oR5SRkiJhUAtXAlKMFeg=w1765-h1621-s-no?authuser=0)
 
 Of course, there were other variants of the original design idea, and this one was a design idea that was copied from team 33, the Killer Bees. We decided to do the top design from a very basic trade study where we rated each design from 1 to 5 on a few categories (Reliability, Speed, Modularity, Simplicity, and Time) and the design that had the highest total would be the one we would go with. I'll talk more about why this trade study was extremely flawed towards the end. But the winner was the top design which ended up on the actual robot.
 
 After settling on a final design direction we started finalizing the overall technical requirements for each subassembly.
-![2d planning](https:///i.imgur.com/tmfXLFs.png)
+![2d planning](https://lh3.googleusercontent.com/pw/AP1GczPvqIFsd0qpUKaX2snpVXaVfV44rKu7gVTQSsYCKwtj4LgKoTFjof7lx-APOzt25uZ_84QZp-KZ5SsTxQDwut2S-3kumhszZGBHVnGODULRAX7pC7F9mjXhkaZ6of3w_DQzRiWAl3ejdkZOwdQ0a5fLqQ=w2587-h1570-s-no?authuser=0)
 
 For example, above is the sketch we used to determine the shooting positions/shooter angles that we would require to meet our requirements (Constraints 5, 6, 7 were the main ones for this)
 
-![2d planning](https:///i.imgur.com/1zb7jNd.png)
+![2d planning](https://lh3.googleusercontent.com/pw/AP1GczPL5O8Ul3aNtqRfxdySO_KZ1UIkIxH90ObpMb8fIANFwmG_4H2bM8chMHsb5ID67XwJ8YHpXOq8bQ2yvb9ODJumwvwdvvedK0MRA84LXyuFYqkjteZnmeR5yecscW42gWRez7EYXPv1pvQxjZJ7Jyx3Nw=w2959-h1520-s-no?authuser=0)
 
 Another example of variable sketching used to determine the shooter angles at certain locations. The highlighted red and orange lines represent the overall degree of freedom that we determined the shooter required for meeting the constraints of the robot.
 
@@ -97,7 +97,7 @@ As we got started with the design, we went through many, many, manyyyyy iteratio
 
 > Sometimes, you just feel like you wanna die - Sukhesh
 
-![robot timelapse](https:///i.imgur.com/e8T1LK3.gif)
+![robot timelapse](https://lh3.googleusercontent.com/pw/AP1GczOtGAg3HdB-vA43AS0fLjenqBo8a3MiOrs6A9RCSqMetEHB1i4Owa6CxQjijdn_IYFusVQdGnUz984fKNHdpIfx1qw8iAk78LU2ZSIOBrzKh2B9uZ8kpH41ucxPcSelZaNZ9NMAf0kR-psySLBf9A6aDQ=w1920-h1080-s-no?authuser=0)
 
 As mentioned above, the work for the robot was split by subgroups. I would make the Intake, Arms, and overall structure, Arya would make the shooter, and Michael would make the electrical board. The new students would cover all the 3D printed parts that we requested to be printed.
 
@@ -105,53 +105,53 @@ As mentioned above, the work for the robot was split by subgroups. I would make 
 
 The intake was probably the 2nd most iterated thing on the robot, 2nd only to the electrical board.
 
-![v1 intake](https:///i.imgur.com/sQzjkBX.png)
+![v1 intake](https://lh3.googleusercontent.com/pw/AP1GczP2I0L21qjxvLemQRvqYPnEPtlEJHgo1UGFukXH71jc_5FcnbttSRv2eYW-0nDK3elFEeExbc7PQzSzWaOeyyHvmt_wVjnHGnIQQquq3Uj7fMEiCYqktZDeWw3In7uv5Wo_t6vRvtn8N5d2CWgY0FmYGw=w2100-h735-s-no?authuser=0)
 Immediately after the presenting the sketch to the team, I extruded the sketch and adjusted the shape slightly to make it more appealing. (I know my priorities are mixed up.)
 
-![v2 intake](https:///i.imgur.com/QLkaGoH.png)
+![v2 intake](https://lh3.googleusercontent.com/pw/AP1GczPebUouxwLgegFq5O1eanc0wmdMWjqvKMcMv1DE2SjhHAenswv7jG26wV2n-ZPD72k6FYMplnxOfo4ze5x71QZasfffo9OTgfwJVNtp1AElg23wDfiNRe7Es6D2cnz4NZVCKKUYVy6g3aMScEMyh1ZSDA=w2164-h874-s-no?authuser=0)
 The biggest dilemma that we had with the intake was the placement of the motor. I originally had a Kraken motor on the intake for driving the wheels and would have a twist motor connected to the arm.
 
-![v4 intake](https:///i.imgur.com/wULObAF.png)
+![v4 intake](https://lh3.googleusercontent.com/pw/AP1GczOy10Zb3USO4846viygkBEvZjM8H3WYZP0JfbFeRVeymULibVfrk-jbIeUIxEk6uO-nKDvl2KIw66R-ZKk_tv0-YV4lzoGaOHPTIChN7ah7WamsMc5Hv7Nvefix8TIl81bDB6ysQRFpZDNnyZgGJM0UnQ=w2332-h1345-s-no?authuser=0)
 We eventually moved both the drive and pivot motors to the arm because of the very simple principle that the motors out there were exposed, and would be moving a lot. By Murphy's law since there's more things that can happen to the intake (collisions, wiring issues from constant movement, etc.), we decided to move the motors to the less moving and less exposed part which were the arms.
 
-![v5 intake](https:///i.imgur.com/7jUBMgL.png)
+![v5 intake](https://lh3.googleusercontent.com/pw/AP1GczPl3_ESHVPVm4wx-gZB3JwPeoRF6xKSggCSrqR_RdTWRCCF5nzScUrX3a34vHL6P70DTcHqeCk77jK7myW6YzlBLeJlhgCI6tSzLXUNImrmHo0JpC6STVedC5oEt161rr4j31kTcXyi-o6T3ZsJQTMYFA=w2080-h1264-s-no?authuser=0)
 Eventually Mr.Lawrence showed us Neo 550 motors which were tiny and could fit on the intake without significant weight issues and limited the worry of collisions since it was pretty small and well protected with the intake walls in place. However, when we tested this version (which was considered a final version), the Neo 550 could not lift the intake simply because of the sheer amount of torque that it needed to exceed to lift the intake. The intake was clearly too heavy.
 
-![v6 intake](https:///i.imgur.com/hxeSz9A.png)
+![v6 intake](https://lh3.googleusercontent.com/pw/AP1GczOGLhBwzdKS252Ee_FBDjtSM9zM3cilsFhFVJwNedg3USMM28r82ZeNz_IK4OjDXm6SVRJWQpuE5qr5BswHhz2UBgFfiHivF9BV0N6HuRL0S-CU1lk4SW1-R1y-_jhAxLf57elwkeIY5zPixAiBvgKeYg=w2074-h1266-s-no?authuser=0)
 This is basically the final version of the intake that you have all come to know. Notice the replacement from wheels and axle to polycarbonate tubing, the cutouts on the intake frame, and the change in gear ratio for the pivot motor. The original intake weighed 5.2kg and with this version we brought it down to 2.8kg. The calculations we did for the torque and gear ratios have been lost, but I assure you that everything was planned with math. I would love to say that the intake was optimized for those cutouts through Altair, but I really didn't have the time to do the optimization, so I kinda just... drew random lines like a schizophrenic and got that cool pattern. (You'll see this similar process for the other cutouts on the robot as well.)
 
-![intake analysis](https:///i.imgur.com/tgMqIA6.png)
+![intake analysis](https://lh3.googleusercontent.com/pw/AP1GczMdnnDAoHUYzgt89rhZTgBkvhe54IRJ5zfXOrfzguBcZmKTC8WLT7ISBtN3jAafG9_fQxxfte97wpRQ4QHWRd8ev2YEfBzR6wIIFbKX1cbjbAM_495G6uCUit5zVOJJXujpuSVDai1NnjiFmOZQWRTxtQ=w2718-h1529-s-no?authuser=0)
 However, I did do some final stress and displacement analysis for the intake to ensure that it would last through our competitions. This picture shows the analysis of a "moment" while lifting the intake since it's only driven from one side. Stress analysis basically confirmed to us that this intake was done.
 
 ##### Arm
 
 The arm was definitely the most simple part on the robot. From the day I sketched out the arm just on a whim to the day we finished the length of the arm never changed.
-![v1 arm](https:///i.imgur.com/rS5br05.png)
+![v1 arm](https://lh3.googleusercontent.com/pw/AP1GczMGkzoGtCWoSzJWIKu34qHRqDWi-HG_gt5KctEdUvezLWkN7H-5w7XORaiqZvK2VvaXOjrZ7byZ3fkHmRoY--5KuCET-MS_ITCK4ccfDbXwGDGsux5kekrnW-1w8U_4fgcAmVoTZjwQDCjH18mBG26TkA=w2524-h1170-s-no?authuser=0)
 Here was just me trying to do some weight savings for the arm because it was extremely heavy. This was also the first version of the arm.
 
-![arm inspiration](https:///i.imgur.com/IBoxrrl.png)
+![arm inspiration](https://lh3.googleusercontent.com/pw/AP1GczN6XWXvi262LsYKeHbB24aHtrFLQ-HUmXo5Jooy3EAZJMUH-W2b6oQfBiQ9Wgtn1bPLc3t1RYzzSFpn6VuGccEFt4Dfj78gddx9N5IGQEdSxZ-kgXwCcityA23OWQtWC2_wyj0DDFHU1pzDSDc_sq53ew=w1750-h1431-s-no?authuser=0)
 After getting the arm design nailed down, which included changing the diameter of the intake connection hole to the same as the structure connection one (since we were using versa hubs for both side), I researched how to effectively reduce weight on the arms. I basically copied team 3357's arm cutouts lmao.
 
-![v2 arm](https:///i.imgur.com/M7cU3nn.png)
+![v2 arm](https://lh3.googleusercontent.com/pw/AP1GczPN3mSvLrc3fxGrCiQKQ0cyz-vHwP01_aprjZAGi_3DAjx3e0ndNIc5UndcM0goxjALz0HOuh4JeQY7xUM3w-b4EHUU5faEL_DA1f1rDhH8TPcKI8cpWJ_M5CfuFdilj9S7HIwKZ_9KpWo-_vJRKLOm1g=w2293-h859-s-no?authuser=0)
 And that resulted in this arm version which is basically the final version. We added cuts to the hub connections so we could make the arms and intakes modular if needed. (Hubs would be removed and the subassembly would just be pulled right out).
 
-![arm analysis](https:///i.imgur.com/SFCxCR8.png)
+![arm analysis](https://lh3.googleusercontent.com/pw/AP1GczPWDu4BiGVKH2ZstqvzE8vbe0BqO9msJPXg_B4Clmdicr-A0xfjAOf-4RDm7EBhr8fnvntBAVp52RoRnZhNe-9e02aLYx3_5gOcnwdwGFKZqfYMv132ipQZCrCj2CumC0_6pphlEJtyh-x4gdhrfO0V4w=w2057-h1599-s-no?authuser=0)
 To confirm that the cutouts would indeed work for our design, I ran a little stress testing on the model and learned that the cutouts were perfectly fine on the arm and in fact could be reduced even more if needed. But with that the arm design was confirmed. (The light white at the bottom of the arm shows the stress applied from a force perpendicular at the top (blue arrow))
 
 ##### Shooter
 
 The shooter (for the most part) was pretty straightforward
 
-![v1 shooter](https:///i.imgur.com/cJUPDTj.png)
+![v1 shooter](https://lh3.googleusercontent.com/pw/AP1GczOGuWFbkvEgjGkepKydti6jLL2K5R6KP2b2vofIZKinZGHzgkKM91dN7SkvHcCRPf9KbrjJ_P7B2BhwLyPg_-eOpLBMraT0m5ZsDgfhmDJGsCuIuaMw87PaSZ6isz9BmAiv6NnPgkdpLfLkj52GQbplLg=w1920-h1165-s-no?authuser=0)
 As usual Arya started with the making a general model of the shooter that could fit the note in it and had the wheels placed where prototyping had shown the optimized placement.
 
-![v2 shooter](https:///i.imgur.com/PTrHTsL.png)
+![v2 shooter](https://lh3.googleusercontent.com/pw/AP1GczMOmtjkWs1RLxegI6P9evHiyo66rFyyGJtHJxyjkPlYtenJCVONXaY3rbNTQkdlaA92_Q73IrCYTjZ4TRNXK9rq0GkTORItgcH82-PJ-PblIstC91n5jT7y6PB-Szm-3znQ6AG4h28iy7QKQSC93RDMmg=w1567-h1597-s-no?authuser=0)
 The pivot point for the shooter had to move to the bottom front of the shooter to fit within the frame and the back was cut accordingly to not interfere with the intake coming in
 
-![v3 shooter](https:///i.imgur.com/FdvlPOb.png)
+![v3 shooter](https://lh3.googleusercontent.com/pw/AP1GczMO6vHqbjwUye9mgrIho8u5c-LwgzYltI42BUdrDg88TvhME28Mx0iUnTdtRo1bqgNU58kkIrG4he0gq9Ixc2qpJ3Dj4xH2e1cl0QRyv427W4wI7oX3grV9989LQU0KX1w7C95-Fc1UQY9BF0zPcBcPAg=w1456-h1183-s-no?authuser=0)
 After adjusting the intake geometry to not interfere with the shooter the back was again extended out and the sprockets to rotate the shooter were put in place.
 
-![v4 shooter](https:///i.imgur.com/JfxWgnK.png)
+![v4 shooter](https://lh3.googleusercontent.com/pw/AP1GczPQ_kwPG5u10ZzHn4jCNvJ0JOPlKK8rMZSgetZ7PTyESmkztoL65BqMApQGY7E-Xu_k_CcdpbnrAO8DFyYJ1cho0mbqZ-p72AYE4pq_j67q4RhDNSnTiz7d0DXzx58jLFU-sHU84TMwwdxfLIWMdCFphg=w1956-h1194-s-no?authuser=0)
 Finally, I came in as the pocket dude and pocketed as much as I could to reduce the weight of the shooter to make it easier for the motor to pivot the intake. Also added the cuts to the hub area to have the shooter be modular if needed to be replaced (spoiler: it never had to be removed ever.)
 
 ##### Electrical Board
@@ -193,7 +193,7 @@ The mentors and I gathered together in front of the whiteboard in the back, and 
 
 While it was useful for the shooter since we knew the compression and wheel spacing needed since we tested it like crazy, for everything else, it was designed from our brains. We were on our own. The compression for the note in the intake was completely guessed by me and we just rolled with it. We also couldn't test the practice robot since the arms weighed too much. We had to do the cutouts on the arm to actually use the practice robot and test the mechanisms, and unfortunately we just didn't have the time. I really wished that we had one of those holed out walls to test out contraptions like this to make prototyping easier.
 
-![rembrants](https:///i.imgur.com/C7xLoyc.png)
+![rembrants](https://lh3.googleusercontent.com/pw/AP1GczOVkHTXiJNNrjmh1meeHRuDJMEB22dOmdxUlo9SvMS73SZBiaxw4U5WBxq6cWe2R5V2zLvWw97GtKoDbkR7qsYhKIiiABT1t25CWA0H_WKNi6RVpC2OQhOmnYvPM4n6x54_HPLjuvbiRrY-rTMl12fB-Q=w2839-h1707-s-no?authuser=0)
 
 > **The manpower of CAD has dwindled**
 
