--- a/pages/Programming/Subsystems/SubsystemOverview.mdx
+++ b/pages/Programming/Subsystems/SubsystemOverview.mdx
@@ -31,7 +31,7 @@ We use Java object-oriented programming to program our robot. We create subsyste
 
 
 
-![robot img](https:///i.imgur.com/JbsJBCf.png)
+![robot img](https://lh3.googleusercontent.com/pw/AP1GczOP19W4oYt8ie1VEsoLIhIpqphr9a9_LDZAj9yEP5YP_QZCOimKqInf_g0pS7mxCeaPm_59HVjgfZobNNSHRQ5oBg_NBxnAKKPmgBf0oj6yhGUod1eF8JoU5cpdXXA225CLQ20P7TMNTiDGlxkhnvXbzg=w1637-h1119-s-no?authuser=0)
 
 * Image of FRC 201's 2024 Robot, SPYDER.
 * Intake, arm, and shooter subsystems can be seen.
