Update subgroup links in index.mdx to include Tools & Setup sections

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -22,7 +22,7 @@ To support your learning journey, we have a variety of subgroups that focus on d
     <Card title="Programming" href="/Programming/Tools&Setup" icon={FaCode()}>
         The programming subgroup focuses on developing the software that controls the robot. Members learn programming languages like Java and C++ and work on autonomous routines and driver controls.
     </Card>
-    <Card title="Electrical" href="/Electrical" icon={FaPlug()}>
+    <Card title="Electrical" href="/Electrical/Tools&Setup" icon={FaPlug()}>
         The electrical subgroup is responsible for designing and wiring the electrical systems on the robot. Members learn about circuits, sensors, and power distribution.
     </Card>
     <Card title="CAD" href="/CAD/Introduction" icon={FaCube()} >
@@ -31,10 +31,10 @@ To support your learning journey, we have a variety of subgroups that focus on d
     <Card title="Mechanical" href="/Mechanical/Index" icon={ImCogs()}>
         The mechanical subgroup designs and builds the physical structure of the robot. Members work with tools, materials, and CAD software to create the robot's components.
     </Card>
-    <Card title="Scouting/Strategy" href="/Strategy" icon={FaRegLightbulb()}>
+    <Card title="Scouting/Strategy" href="/Strategy/Tools&Setup" icon={FaRegLightbulb()}>
         The strategy subgroup analyzes game data and develops game strategies for competitions. Members work on scouting, match analysis, and robot performance optimization.
     </Card>
-    <Card title="Business" href="/card" icon={FaBuildingShield()}>
+    <Card title="Business" href="/Business/Tools&Setup" icon={FaBuildingShield()}>
         The business subgroup focuses on fundraising, marketing, and team outreach. Members work on sponsorships, social media, and community events.
     </Card>
 
@@ -51,7 +51,7 @@ We have put together what we did each week in the 2025 season. This is a great w
     <Card title="Robot Safety System" href="/Experiences/RSS" icon={FaRobot()}>
         Check out our weekly experiences from the 2024 season to see what we did each week and what you can expect in the future.
     </Card>
-     <Card title="Robot Design" href="/Experiences/robotDesign" icon={FaRobot()}>
+     <Card title="Robot Design" href="/Experiences/Robot_Design/robotDesign" icon={FaRobot()}>
             The Robot Safety System subgroup focuses on developing a safety system for the robot. Members work on implementing safety features and ensuring compliance with competition rules.
     </Card>
 </Cards>
