--- a/pages/Business/Tools&Setup.mdx
+++ b/pages/Business/Tools&Setup.mdx
@@ -22,7 +22,7 @@ import { Cards, Card } from 'nextra/components';
 
 # Programming Rules:
 1. No-spaces in file names.
-2. Add your file name to the _meta.js file.
+2. Add your file name to the _meta.json file.
 ```js
 export default {
   foo: '',
